feat(add): jmap导出, 调优相关